# ultimate_wallpapers_manager

./: .gitignore  PKGBUILD  README.md  config.example.toml  pyproject.toml  ultimate-wallpapers-manager.install
systemd/: swww-daemon.service  uwm-rotate.service  uwm-rotate.timer  uwm-watcher.service
uwm/: __main__.py  config.py  fetcher.py  state.py  watcher.py
uwm/backends/: __init__.py  hyprpaper.py  swww.py  waypaper.py
uwm/searchers/: __init__.py  wallhaven.py
uwm/sources/: __init__.py  games.py  radarr.py  sonarr.py
