[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uwm"
version = "0.1.0b1"
description = "Gestionnaire de fonds d'écran intelligent basé sur les médias et jeux actifs (Hyprland/Wayland)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["uwm*"]
